# openshelf

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  books.rs  db.rs  main.rs  storage.rs  users.rs
docs/: SUMMARY.md  api-reference.md  architecture.md  deployment.md  features.md  index.md  multi-app.md  setup.md
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts  auth.svelte.ts  pdf.ts
frontend/src/lib/components/reader/: BookViewport.svelte  BookmarksPanel.svelte  DictionaryPopup.svelte  HighlightsList.svelte  NoteEditor.svelte  ReaderFooter.svelte  ReaderHeader.svelte  SearchPanel.svelte  SelectionMenu.svelte  TocPanel.svelte  TypographyPanel.svelte
frontend/src/lib/reader/: bookmarks.svelte.ts  epub.svelte.ts  highlights.svelte.ts  settings.svelte.ts  themes.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/read/[id]/: +page.svelte
garage/: docker-compose.yml  garage.toml
scripts/: cloud-init.yaml  host-caddy-entrypoint.sh  install-cron.sh  setup-garage-bucket.sh  setup.sh  uninstall-cron.sh
