[package]
name = "openshelf-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
rusqlite = { version = "0.34", features = ["bundled"] }
s3 = { version = "0.1", features = ["providers"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["default", "rand"] }
rand_core = { version = "0.6", features = ["getrandom"] }
uuid = { version = "1", features = ["v4"] }
